trying to setup https with let's encrypt

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,25 +4,15 @@
     "description": "Testing out some Web Tech",
     "start_url": "/",
     "display": "standalone",
+    "background_color": "#FFFFFF",
+    "theme_color": "#FEFEFE",
     "icons": [{
-        "src": "images/touch-icon-iphone.png",
-        "sizes": "60x60",
-        "type": "image/png"
-    }, {
-        "src": "images/touch-icon-iphone-retina.png",
-        "sizes": "120x120",
-        "type": "image/png"
-    }, {
-        "src": "images/touch-icon-ipad.png",
-        "sizes": "76x76",
-        "type": "image/png"
-    }, {
-        "src": "images/touch-icon-ipad-retina.png",
-        "sizes": "152x152",
-        "type": "image/png"
-    }, {
         "src": "images/touch-icon-android.png",
         "sizes": "144x144",
+        "type": "image/png"
+    }, {
+        "src": "images/touch-icon-android-splash.png",
+        "sizes": "192x192",
         "type": "image/png"
     }]
 }
