--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Richie Casto",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "letsencrypt-express": "^2.0.5"
   }
 }
