--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "7.0.0"
+  },
   "author": "Richie Casto",
   "license": "ISC",
   "dependencies": {
