--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "author": "Richie Casto",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.14.0",
-    "letsencrypt-express": "^2.0.5"
+    "express": "^4.14.0"
   }
 }
