--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "Richie Casto",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "webrtc-adapter": "^2.0.6",
+    "ws": "^1.1.1"
   }
 }
