--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Richie Casto",
   "license": "ISC",
   "dependencies": {
+    "compression": "^1.6.2",
     "express": "^4.14.0",
     "webrtc-adapter": "^2.0.6",
     "ws": "^1.1.1"
