--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "compression": "^1.6.2",
+    "debug": "^2.3.2",
     "express": "^4.14.0",
     "webrtc-adapter": "^2.0.6",
     "ws": "^1.1.1"
