--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "DEBUG=* node server.js",
+    "deploy": "git push azure production:master",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
