--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "debug": "DEBUG=* node --inspect server.js",
-    "dev": "DEBUG=* node server.js",
+    "debug": "DEBUG=* PORT=3000 node --inspect server.js",
+    "dev": "DEBUG=* PORT=3000 node server.js",
     "deploy": "git push azure production:master",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
