--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "ws": "^1.1.1"
   },
   "devDependencies": {
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-env": "^1.4.0",
     "css-loader": "^0.28.0",
     "style-loader": "^0.16.1",
     "webpack": "^2.4.1"
